vlib/v/checker/tests/const_field_dec_err.out
vlib/v/checker/tests/const_field_dec_err.v:6:2: error: cannot assign to constant `a` 
    4 | 
    5 | fn main() {
    6 |     a--
      |     ^
    7 | }
