vlib/v/checker/tests/const_field_dec_err.vv
const (
	a = 1
)

fn main() {
	a--
}
